# simple-cpp

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chn/simplecpp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniUtils.cpp  SimpleCppJNI.cpp
app/src/main/cpp/include/: JniUtils.h  MyLogger.h  StringWrapper.h
app/src/main/java/com/chn/simplecpp/: MainActivity.kt  MyApp.kt  SimpleCpp.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/chn/simplecpp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
